--- a/MedicareAmaze/tsconfig.json
+++ b/MedicareAmaze/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
-    "lib": ["es5"],
-    "sourceMap": true
+    "target": "es6",
+    "lib": [ "es6" ],
+    "sourceMap": true,
+    "noImplicitAny": false
+
   },
   "exclude": [
     "node_modules"
