--- a/MedicareAmaze/package.json
+++ b/MedicareAmaze/package.json
@@ -16,7 +16,9 @@
     "botbuilder": "^3.15.0",
     "botbuilder-handoff": "git+https://github.com/medicareamaze/Bot-HandOff.git#npm-handoff",
     "cache": "^2.1.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "mongo-bot-storage": "0.0.4",
     "node-fetch": "^2.1.2",
     "node-rest-client": "^3.1.0",
     "planout": "^4.0.0",
