--- a/MedicareAmaze/package.json
+++ b/MedicareAmaze/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "author": {
     "name": "srangaiah"
-    
   },
   "devDependencies": {
     "@types/node": "^6.0.113",
@@ -16,6 +15,7 @@
     "bot-graph-dialog": "github:medicareamaze/bot-graph-dialog",
     "botbuilder": "^3.15.0",
     "botbuilder-handoff": "git+https://github.com/medicareamaze/Bot-HandOff.git#npm-handoff",
+    "botbuilder-location": "^2.0.0",
     "cache": "^2.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
